codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completed_turn_clears_visible_running_hook.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 3439
expression: "format!(\"before completion:\\n{before_completion}\\nafter completion:\\n{}\",\nhook_status_frame(&chat, 80))"
---
before completion:
"                                                                                "
" Elpis · model gpt-5.6-sol default · location /tmp/project                      "
"Elpising… (0s • esc to interrupt) · Running hook│ CONTEXT LEDGER  context not   "
"                                                │ measured · ≈0 source          "
"────────────────────────────────────────────────┤ estimates                     "
"› Ask Elpis to do anything                      │ Tab controls · Alt+C hide ·   "
"────────────────────────────────────────────────┤ Ctrl+click open file          "
"        100% context left · Tab Context Ledger  │                               "
"                                                │ SMART PRUNE       [···] SYNC  "
"                                                │ Reading current thread state  "
"                                                │ Syncing… · /smart-prune on|   "
"                                                │ off sets an explicit state    "
"                                                │                               "
"                                                │ SUBAGENTS          [━━━●] ON  "
"                                                │ May delegate to other agents  "
"                                                │                               "
"                                                │ CONTEXT WINDOW  usage         "
"                                                │ unavailable                   "
"                                                │ Context measurement           "
"                                                │ unavailable until the first   "
"                                                │ request snapshot              "
"                                                │                               "
"                                                │ No portable context is        "
"                                                │ available.                    "
after completion:
"                                                                                "
" Elpis · model gpt-5.6-sol default · location /tmp/project                      "
"────────────────────────────────────────────────┐ CONTEXT LEDGER  context not   "
"› Ask Elpis to do anything                      │ measured · ≈0 source          "
"────────────────────────────────────────────────┤ estimates                     "
"        100% context left · Tab Context Ledger  │ Tab controls · Alt+C hide ·   "
"                                                │ Ctrl+click open file          "
"                                                │                               "
"                                                │ SMART PRUNE       [···] SYNC  "
"                                                │ Reading current thread state  "
"                                                │ Syncing… · /smart-prune on|   "
"                                                │ off sets an explicit state    "
"                                                │                               "
"                                                │ SUBAGENTS          [━━━●] ON  "
"                                                │ May delegate to other agents  "
"                                                │                               "
"                                                │ CONTEXT WINDOW  usage         "
"                                                │ unavailable                   "
"                                                │ Context measurement           "
"                                                │ unavailable until the first   "
"                                                │ request snapshot              "
"                                                │                               "
"                                                │ No portable context is        "
"                                                │ available.                    "
