codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__connector_scope_invalidation.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 4365
expression: "format!(\"Before account change:\\n{before}\\n\\nAfter account change:\\n{after}\")"
---
Before account change:
 Elpis · model gpt-5.6-sol default · location /tmp/project

  Apps
  Use $ to insert an installed app into your prompt.
  Installed 1 of 1 available apps.

  Type to search apps

› Previous Account App  Installed · App link unavailable

  enter select · esc back

After account change:
 Elpis · model gpt-5.6-sol default · location /tmp/project
│                                               │CONTEXT LEDGER  context not
› Ask Elpis to do anything                      │measured · ≈0 source estimates
│                                               │Tab controls · Alt+C hide ·
        100% context left · Tab Context Ledger  │Ctrl+click open file
                                                │
                                                │SMART PRUNE          [···] SYNC
                                                │Reading current thread state
                                                │Syncing… · /smart-prune on|off
                                                │sets an explicit state
                                                │
                                                │SUBAGENTS             [━━━●] ON
                                                │May delegate to other agents
                                                │
                                                │CONTEXT WINDOW  usage
                                                │unavailable
                                                │Context measurement unavailable
                                                │until the first request
                                                │snapshot
                                                │
                                                │No portable context is
                                                │available.
