codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__custom_model_display_name_all_models.snap
---
source: tui/src/chatwidget/tests/model_display_name_tests.rs
assertion_line: 40
expression: "render_bottom_popup(&chat, 80)"
---
 Elpis · model us.openai.gpt-5.6-luna high · location /tmp/project

  Choose a mind and effort
  Provider: OpenAI (openai)
  Route: the provider's default endpoint
  Protocol: OpenAI Responses
  Credential: your OpenAI sign-in


› 1. GPT-5.6 Luna (current)  Custom provider model
  2. Change provider…        Currently OpenAI

  enter select · esc back
