codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__declined_tool_suggestion.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 572
expression: normalize_snapshot_paths(popup)
---
 Elpis · model gpt-5.6-sol default · location /tmp/project
────────────────────────────────────────────────┐ CONTEXT LEDGER  context not
› Ask Elpis to do anything                      │ measured · ≈0 source
────────────────────────────────────────────────┤ estimates
        100% context left · Tab Context Ledger  │ Tab controls · Alt+C hide ·
                                                │ Ctrl+click open file
                                                │
                                                │ SMART PRUNE       [···] SYNC
                                                │ Reading current thread state
                                                │ Syncing… · /smart-prune on|
                                                │ off sets an explicit state
                                                │
                                                │ SUBAGENTS          [━━━●] ON
                                                │ May delegate to other agents
                                                │
                                                │ CONTEXT WINDOW  usage
                                                │ unavailable
                                                │ Context measurement
                                                │ unavailable until the first
                                                │ request snapshot
                                                │
                                                │ No portable context is
                                                │ available.
